# helloworld

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: documentation.yml  ubuntu.yml
app/: CMakeLists.txt  main.cpp
cmake/: AddGitSubmodule.cmake  CodeCoverage.cmake  Warnings.cmake
docs/: Doxyfile
docs/html/: CMakeLists_8txt.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_69b099bd43adb4bba441e5e2f4ee0372.html  files.html  globals.html  globals_func.html  index.html  mylib_2CMakeLists_8txt.html  mylib_8cpp.html  mylib_8h.html  mylib_8h_source.html
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js
src/bar/: CMakeLists.txt  bar.cpp  bar.h
src/foo/: CMakeLists.txt  foo.cpp  foo.h
src/mylib/: CMakeLists.txt  mylib.cpp  mylib.h
tests/: CMakeLists.txt  test_bar.cpp  test_foo.cpp
